# panorama-view

./: .gitignore  CMakeLists.txt  README.md  basic-stitching.ipynb  main.cpp
src/: jpeg_img.cpp  jpeg_img.h
src/image_stitcher/: image_stitcher.h
src/image_stitcher/bf_matcher/: bf_matcher.cpp  bf_matcher.h
src/image_stitcher/homography_calculator/: homography_calculator.cpp  homography_calculator.h
src/image_stitcher/image_transformation/: image_transformation.cpp  image_transformation.h
src/image_stitcher/knn_finder/: kd_tree.cpp  kd_tree.h  knn_finder.cpp  knn_finder.h
src/jpeg_handler/: jpeg_handler.cpp  jpeg_handler.h
tests/: main_test.cpp  test_bf_matcher.h  test_homography_calculator.h  test_image_transformation.h  test_knn_finder.h
